--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.10.2",
+    "@types/react": "18.2.45",
+    "typescript": "5.3.3"
   }
 }
