--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,29 +1,50 @@
-app = "opensign-backend"
-primary_region = "iad"
+# fly.toml app configuration file generated for opensign-backend on 2026-02-19T12:19:09+02:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'opensign-backend'
+primary_region = 'iad'
+
+[build]
 
 [env]
-  PORT = "3000"
+  PORT = '3000'
+
+[http_service]
+  internal_port = 3000
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[services]]
+  protocol = 'tcp'
   internal_port = 3000
-  protocol = "tcp"
 
   [[services.ports]]
     port = 80
-    handlers = ["http"]
+    handlers = ['http']
 
   [[services.ports]]
     port = 443
-    handlers = ["tls", "http"]
+    handlers = ['tls', 'http']
 
   [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "10s"
+    interval = '15s'
+    timeout = '2s'
+    grace_period = '10s'
 
   [[services.http_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "10s"
-    method = "get"
-    path = "/health"
+    interval = '15s'
+    timeout = '2s'
+    grace_period = '10s'
+    method = 'get'
+    path = '/health'
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
