chore: updated outputDirectory path in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,5 @@
   "routes": [
     { "src": "/(.*)", "dest": "frontend/$1" }
   ],
-  "outputDirectory": "frontend/.next"
+  "outputDirectory": ".next"
 }
