chore: added authentication, envelope, and signing functionality with required dependencies

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,4 @@ TWILIO_ACCOUNT_SID=replace-me
 TWILIO_AUTH_TOKEN=replace-me
 TWILIO_FROM_NUMBER=replace-me
 VERCEL_BLOB_READ_WRITE_TOKEN=replace-me
+FRONTEND_URL=https://opensign.atem.gdn
