--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "lucide-react": "^0.575.0",
     "next": "14.2.5",
+    "pdfjs-dist": "^5.4.624",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-draggable": "^4.5.0",
+    "react-pdf": "^10.3.0",
+    "react-resizable": "^3.1.3",
+    "sonner": "^2.0.7",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
     "@types/react": "18.2.45",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "5.3.3"
   }
 }
