--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "copy-worker": "node -e \"require('fs').cpSync('node_modules/react-pdf/node_modules/pdfjs-dist/build/pdf.worker.min.mjs','public/pdf.worker.min.mjs')\"",
+    "dev": "npm run copy-worker && next dev",
+    "build": "npm run copy-worker && next build",
     "start": "next start"
   },
   "dependencies": {
